k3s_migration/03-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-web
  template:
    metadata:
      labels:
        app: static-web
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: /usr/share/nginx/html
        - name: habit
          mountPath: /usr/share/nginx/habit
        - name: status
          mountPath: /usr/share/nginx/status
        - name: flutter
          mountPath: /usr/share/nginx/flutter
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        - name: auth
          mountPath: /etc/nginx/conf.d/.htpasswd
          subPath: .htpasswd
      volumes:
      - name: html
        hostPath:
          path: /var/www/html
      - name: habit
        hostPath:
          path: /var/www/habit
      - name: status
        hostPath:
          path: /var/www/status
      - name: flutter
        hostPath:
          path: /home/ubuntu/workspace/bithabit_flutter/build/web
      - name: config
        configMap:
          name: nginx-conf
      - name: auth
        secret:
          secretName: basic-auth
---
apiVersion: v1
kind: Service
metadata:
  name: static-web-svc
spec:
  selector:
    app: static-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
